02_applications/mail/dovecot_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dovecot-server
  namespace: mail
  labels:
    app.kubernetes.io/name: "dovecot"
    app.kubernetes.io/instance: "dovecot"
    app.kubernetes.io/component: "server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "dovecot"
      app.kubernetes.io/instance: "dovecot"
      app.kubernetes.io/component: "server"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "dovecot"
        app.kubernetes.io/instance: "dovecot"
        app.kubernetes.io/component: "server"
    spec:
      containers:
        - name:  dovecot
          image: registry.lab.reisman.org/proxy.docker.io/dovecot/dovecot:2.3.21
          imagePullPolicy: IfNotPresent
          ports:
            - name: pop3
              containerPort: 110
              protocol: TCP
            - name: pop3s
              containerPort: 995
              protocol: TCP
            - name: imap
              containerPort: 143
              protocol: TCP
            - name: imaps
              containerPort: 993
              protocol: TCP
            - name: submission
              containerPort: 587
              protocol: TCP
            - name: lmtp
              containerPort: 24
              protocol: TCP
            - name: sieve
              containerPort: 4190
              protocol: TCP
            - name: health
              containerPort: 5001
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: submission
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: submission
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: mailboxes
              mountPath: /var/vmail
            - name: config
              mountPath: /etc/dovecot/conf.d
            - name: certificate
              mountPath: /var/certificate
            - name: scripts
              mountPath: /opt/dovecot/bin
      volumes:
      - name: mailboxes
        persistentVolumeClaim:
          claimName: dovecot-mailboxes
      - name: config
        configMap:
          name: dovecot-config
      - name: scripts
        configMap:
          name: dovecot-config-scripts
          defaultMode: 0777
      - name: certificate
        secret:
          secretName: mail-cert-tls
