02_applications/mail/roundcube_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcube-server
  namespace: mail
  labels:
    app.kubernetes.io/name: "roundcube"
    app.kubernetes.io/instance: "roundcube"
    app.kubernetes.io/component: "server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "roundcube"
      app.kubernetes.io/instance: "roundcube"
      app.kubernetes.io/component: "server"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "roundcube"
        app.kubernetes.io/instance: "roundcube"
        app.kubernetes.io/component: "server"
    spec:
      containers:
        - name:  roundcube
          image: registry.lab.reisman.org/proxy.docker.io/roundcube/roundcubemail:1.6.9-apache
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: www-data
              mountPath: /var/www/html
            - name: roundcube-temp
              mountPath: /tmp/roundcube-temp
            - name: roundcube-config
              mountPath: /var/roundcube/config
      volumes:
        - name: www-data
          emptydir: {}
        - name: roundcube-temp
          emptydir: {}
        - name: roundcube-config
          secret:
            secretName: roundcube-server-config
