02_applications/mail/clamav_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clamav-server
  namespace: mail
  labels:
    app.kubernetes.io/name: "clamav"
    app.kubernetes.io/instance: "clamav"
    app.kubernetes.io/component: "server"
spec:
  type: ClusterIP
  ports:
    - name: milter
      protocol: TCP
      port: 3310
      targetPort: milter
  selector:
    app.kubernetes.io/name: "clamav"
    app.kubernetes.io/instance: "clamav"
    app.kubernetes.io/component: "server"
