02_applications/mail/dovecot_service_internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: dovecot-server-internal
  namespace: mail
  labels:
    app.kubernetes.io/name: "dovecot"
    app.kubernetes.io/instance: "dovecot"
    app.kubernetes.io/component: "server"
  annotations:
    metallb.universe.tf/allow-shared-ip: mail
spec:
  type: ClusterIP
  ports:
    - name: lmtp
      protocol: TCP
      port: 24
      targetPort: lmtp
    - name: pop3
      protocol: TCP
      port: 110
      targetPort: pop3
    - name: pop3s
      protocol: TCP
      port: 995
      targetPort: pop3s
    - name: imap
      protocol: TCP
      port: 143
      targetPort: imap
    - name: imaps
      protocol: TCP
      port: 993
      targetPort: imaps
    - name: sieve
      protocol: TCP
      port: 4190
      targetPort: sieve
    - name: auth
      protocol: TCP
      port: 12345
      targetPort: auth
  selector:
    app.kubernetes.io/name: "dovecot"
    app.kubernetes.io/instance: "dovecot"
    app.kubernetes.io/component: "server"
