02_applications/mail/spamassassin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spamassassin-server
  namespace: mail
  labels:
    app.kubernetes.io/name: "spamassassin"
    app.kubernetes.io/instance: "spamassassin"
    app.kubernetes.io/component: "server"
spec:
  type: ClusterIP
  ports:
    - name: scan
      protocol: TCP
      port: 783
      targetPort: scan
  selector:
    app.kubernetes.io/name: "spamassassin"
    app.kubernetes.io/instance: "spamassassin"
    app.kubernetes.io/component: "server"
